Interim checkin; logical model assembly now works shakily
Signed-off-by: Laird Nelson <ljnelson@gmail.com>