@@ -86,4 +86,21 @@
 
   </dependencies>
 
+  <build>
+    <plugins>
+      <plugin>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <argLine>
+            --add-modules=java.logging,org.junit.jupiter.engine
+            --enable-preview
+          </argLine>
+          <systemPropertyVariables>
+            <java.util.logging.config.file>src/test/logging.properties</java.util.logging.config.file>
+          </systemPropertyVariables>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
+
 </project>
